--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -17,17 +17,50 @@ extra-source-files:  CHANGELOG.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:  Sudoku
-  other-modules:       Sudoku.Defs, Sudoku.Util, Sudoku.Validity, Sudoku.Solve.Backtracking
+  exposed-modules:     Sudoku
+  other-modules:       Sudoku.Defs,
+                       Sudoku.Generate,
+                       Sudoku.Util,
+                       Sudoku.Validity,
+                       Sudoku.Solve.Backtracking,
+                       Sudoku.Solve.Basic
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.13, random
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable sudoku
   main-is:             Main.hs
-  other-modules:       Sudoku, Sudoku.Defs, Sudoku.Util, Sudoku.Validity, Sudoku.Solve.Backtracking
+  other-modules:       Sudoku,
+                       Sudoku.Defs,
+                       Sudoku.Generate,
+                       Sudoku.Util,
+                       Sudoku.Validity,
+                       Sudoku.Solve.Backtracking
+                       Sudoku.Solve.Basic
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.13, random
   hs-source-dirs:      src
+  default-language:    Haskell2010
+
+test-suite sudoku-testsuite
+  type:                exitcode-stdio-1.0
+  main-is:             Test.hs
+  other-modules:       Sudoku.Tests.TestUtils,
+                       Sudoku.Tests.Defs,
+                       Sudoku.Tests.Generate,
+                       Sudoku.Tests.Util,
+                       Sudoku.Tests.Solve.Backtracking,
+                       Sudoku.Tests.Solve.Basic,
+                       Sudoku.Defs,
+                       Sudoku.Generate,
+                       Sudoku.Util,
+                       Sudoku.Validity,
+                       Sudoku.Solve.Backtracking
+                       Sudoku.Solve.Basic
+  build-depends:       base >=4.12 && <4.13,
+                       QuickCheck,
+                       checkers,
+                       random
+  hs-source-dirs:      src testsuite
   default-language:    Haskell2010
