parse kaggle CSV

--- a/cabal.project
+++ b/cabal.project
@@ -2,7 +2,7 @@ packages: sudoku.cabal
 tests: True
 coverage: True
 library-coverage: True
-documentation: True
+-- documentation: True
 
 package sudoku
   documentation: True
