--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -27,7 +27,7 @@ library
                        Sudoku.Solve.Backtracking,
                        Sudoku.Solve.Basic
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13, random
+  build-depends:       base >=4.12 && <4.13, random, strict
   hs-source-dirs:      src
   default-language:    Haskell2010
 
