--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -41,7 +41,7 @@ executable sudoku
                        Sudoku.Solve.Backtracking
                        Sudoku.Solve.Basic
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13, random
+  build-depends:       base >=4.12 && <4.13, random, strict
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -63,6 +63,7 @@ test-suite sudoku-testsuite
   build-depends:       base >=4.12 && <4.13,
                        QuickCheck,
                        checkers,
-                       random
+                       random,
+                       strict
   hs-source-dirs:      src testsuite
   default-language:    Haskell2010
