--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -33,13 +33,13 @@ library
                        Sudoku.Server.Util
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
-                       bytestring,
-                       random,
-                       strict,
-                       http-types,
-                       wai,
-                       aeson,
-                       text
+                       aeson                >= 1.4.6 && < 1.5,
+                       bytestring           >= 0.10.8 && < 0.11,
+                       text                 >= 1.2.3 && < 1.3,
+                       random               >= 1.1 && < 1.2,
+                       http-types           >= 0.12.3 && < 0.13,
+                       strict               >= 0.4.0 && < 0.5,
+                       wai                  >= 3.2.3 && < 3.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -59,14 +59,14 @@ executable sudoku
                        Sudoku.Server.Util
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
-                       bytestring,
-                       random,
-                       strict,
-                       http-types,
-                       wai,
-                       warp,
-                       aeson,
-                       text
+                       aeson                >= 1.4.6 && < 1.5,
+                       bytestring           >= 0.10.8 && < 0.11,
+                       text                 >= 1.2.3 && < 1.3,
+                       random               >= 1.1 && < 1.2,
+                       http-types           >= 0.12.3 && < 0.13,
+                       strict               >= 0.4.0 && < 0.5,
+                       wai                  >= 3.2.3 && < 3.3,
+                       warp                 >= 3.3.20 && < 3.4
   hs-source-dirs:      src
   default-language:    Haskell2010
 
