--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 common deps
-  build-depends:       base >=4.12 && <4.13,
+  build-depends:       base >=4.12,
                        aeson                >= 1.4.6 && < 1.5,
                        bytestring           >= 0.10.8 && < 0.11,
                        text                 >= 1.2.3 && < 1.3,
@@ -77,7 +77,7 @@ test-suite sudoku-testsuite
                        Sudoku.Validity,
                        Sudoku.Solve.Backtracking
                        Sudoku.Solve.Basic
-  build-depends:       base >=4.12 && <4.13,
+  build-depends:       base >=4.12,
                        QuickCheck,
                        checkers,
                        random,
