--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -5,14 +5,13 @@ synopsis:            Sudoku solver implemented in Haskell
 description:
     Sudoku is a library for generating, checking and solving Sudoku puzzles
 homepage:            https://github.com/fpringle/haskell-sudoku
-license:             MIT
+license:             BSD-3-Clause
 license-file:        LICENSE
-author:              Freddy Pringle
+author:              Frederick Pringle
 maintainer:          freddyjepringle@gmail.com
 -- copyright:
 category:            Game
 build-type:          Simple
-extra-source-files:  CHANGELOG.md
 
 common deps
   build-depends:       base >=4.12,
@@ -59,6 +58,7 @@ executable sudoku
                        Sudoku.Server.Util
   -- other-extensions:
   build-depends:       warp                 >= 3.3.20 && < 3.4
+                       , sudoku
   hs-source-dirs:      src
   default-language:    Haskell2010
 
