--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -3,7 +3,7 @@ name:                sudoku
 version:             0.1.0.0
 synopsis:            Sudoku solver implemented in Haskell
 description:
-    Sudoku is a library for generating, checking and solving Sudoku puzzles
+    Sudoku is a library for generating, checking and solving Sudoku puzzles.
 homepage:            https://github.com/fpringle/haskell-sudoku
 license:             BSD-3-Clause
 license-file:        LICENSE
@@ -14,30 +14,30 @@ category:            Game
 build-type:          Simple
 
 common deps
-  build-depends:       base >=4.12,
-                       aeson                >= 1.4.6 && < 1.5,
-                       bytestring           >= 0.10.8 && < 0.11,
-                       text                 >= 1.2.3 && < 1.3,
-                       random               >= 1.1 && < 1.2,
-                       http-types           >= 0.12.3 && < 0.13,
-                       strict               >= 0.4.0 && < 0.5,
-                       wai                  >= 3.2.3 && < 3.3
+  build-depends:       base >=4.12
+                       , aeson                >= 1.4.6 && < 1.5
+                       , bytestring           >= 0.10.8 && < 0.11
+                       , text                 >= 1.2.3 && < 1.3
+                       , random               >= 1.1 && < 1.2
+                       , http-types           >= 0.12.3 && < 0.13
+                       , strict               >= 0.4.0 && < 0.5
+                       , wai                  >= 3.2.3 && < 3.3
 
 library
   import:              deps
-  exposed-modules:     Sudoku,
-                       Sudoku.Solve,
-                       Sudoku.Server
-  other-modules:       Sudoku.Defs,
-                       Sudoku.Generate,
-                       Sudoku.Util,
-                       Sudoku.Validity,
-                       Sudoku.Solve.Backtracking,
-                       Sudoku.Solve.Basic,
-                       Sudoku.Server.Get,
-                       Sudoku.Server.Post
-                       Sudoku.Server.Server,
-                       Sudoku.Server.Util
+  exposed-modules:     Sudoku
+                       , Sudoku.Solve
+                       , Sudoku.Server
+                       , Sudoku.Types
+                       , Sudoku.Generate
+                       , Sudoku.Util
+                       , Sudoku.Validity
+                       , Sudoku.Solve.Backtracking
+                       , Sudoku.Solve.Basic
+                       , Sudoku.Server.Get
+                       , Sudoku.Server.Post
+                       , Sudoku.Server.Server
+                       , Sudoku.Server.Util
   -- other-extensions:
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -45,17 +45,17 @@ library
 executable sudoku
   import:              deps
   main-is:             Main.hs
-  other-modules:       Sudoku.Defs,
-                       Sudoku.Generate,
-                       Sudoku.Util,
-                       Sudoku.Validity,
-                       Sudoku.Solve.Backtracking,
-                       Sudoku.Solve.Basic,
-                       Sudoku.Server,
-                       Sudoku.Server.Get,
-                       Sudoku.Server.Post,
-                       Sudoku.Server.Server,
-                       Sudoku.Server.Util
+  other-modules:       Sudoku.Types
+                       , Sudoku.Generate
+                       , Sudoku.Server
+                       , Sudoku.Server.Get
+                       , Sudoku.Server.Post
+                       , Sudoku.Server.Server
+                       , Sudoku.Server.Util
+                       , Sudoku.Solve.Backtracking
+                       , Sudoku.Solve.Basic
+                       , Sudoku.Util
+                       , Sudoku.Validity
   -- other-extensions:
   build-depends:       warp                 >= 3.3.20 && < 3.4
                        , sudoku
@@ -65,22 +65,23 @@ executable sudoku
 test-suite sudoku-testsuite
   type:                exitcode-stdio-1.0
   main-is:             Test.hs
-  other-modules:       Sudoku.Tests.TestUtils,
-                       Sudoku.Tests.Defs,
-                       Sudoku.Tests.Generate,
-                       Sudoku.Tests.Util,
-                       Sudoku.Tests.Solve.Backtracking,
-                       Sudoku.Tests.Solve.Basic,
-                       Sudoku.Defs,
-                       Sudoku.Generate,
-                       Sudoku.Util,
-                       Sudoku.Validity,
-                       Sudoku.Solve.Backtracking
-                       Sudoku.Solve.Basic
-  build-depends:       base >=4.12,
-                       QuickCheck,
-                       checkers,
-                       random,
-                       strict
+  other-modules:       Sudoku.Tests.TestUtils
+                       , Sudoku.Tests.Types
+                       , Sudoku.Tests.Generate
+                       , Sudoku.Tests.Util
+                       , Sudoku.Tests.Solve.Backtracking
+                       , Sudoku.Tests.Solve.Basic
+                       , Sudoku.Types
+                       , Sudoku.Generate
+                       , Sudoku.Solve.Backtracking
+                       , Sudoku.Solve.Basic
+                       , Sudoku.Util
+                       , Sudoku.Validity
+  build-depends:       base >=4.12
+                       , QuickCheck
+                       , checkers
+                       , random
+                       , strict
+                       , sudoku
   hs-source-dirs:      src testsuite
   default-language:    Haskell2010
