--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -38,6 +38,7 @@ library
                        , Sudoku.Server.Post
                        , Sudoku.Server.Server
                        , Sudoku.Server.Util
+  other-modules:    
   -- other-extensions:
   hs-source-dirs:      src
   default-language:    Haskell2010
