--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -15,13 +15,13 @@ build-type:          Simple
 
 common deps
   build-depends:       base >=4.12
-                       , aeson                >= 1.4.6 && < 1.5
-                       , bytestring           >= 0.10.8 && < 0.11
-                       , text                 >= 1.2.3 && < 1.3
-                       , random               >= 1.1 && < 1.2
-                       , http-types           >= 0.12.3 && < 0.13
-                       , strict               >= 0.4.0 && < 0.5
-                       , wai                  >= 3.2.3 && < 3.3
+                       , aeson
+                       , bytestring
+                       , text
+                       , random
+                       , http-types
+                       , strict
+                       , wai
 
 library
   import:              deps
@@ -56,7 +56,7 @@ executable sudoku
                        , Sudoku.Util
                        , Sudoku.Validity
   -- other-extensions:
-  build-depends:       warp                 >= 3.3.20 && < 3.4
+  build-depends:       warp
                        , sudoku
   hs-source-dirs:      src
   default-language:    Haskell2010
