--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -37,7 +37,7 @@ library
                        , Sudoku.Server.Get
                        , Sudoku.Server.Post
                        , Sudoku.Server.Util
-  other-modules:    
+  other-modules:
   -- other-extensions:
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -45,20 +45,11 @@ library
 executable sudoku
   import:              deps
   main-is:             Main.hs
-  other-modules:       Sudoku.Types
-                       , Sudoku.Generate
-                       , Sudoku.Server
-                       , Sudoku.Server.Get
-                       , Sudoku.Server.Post
-                       , Sudoku.Server.Util
-                       , Sudoku.Solve.Backtracking
-                       , Sudoku.Solve.Basic
-                       , Sudoku.Util
-                       , Sudoku.Validity
+  -- other-modules:
   -- other-extensions:
-  build-depends:       warp
+  build-depends:       warp >= 3.3.20 && < 3.4
                        , sudoku
-  hs-source-dirs:      src
+  hs-source-dirs:      exe
   default-language:    Haskell2010
 
 test-suite sudoku-testsuite
